--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Grupo JojoBros",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "sequelize": "^6.37.4",
     "sqlite3": "^5.1.7"
